--- a/app/src/main/res/drawable/bg_radio_not_selected.xml
+++ b/app/src/main/res/drawable/bg_radio_not_selected.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid
-        android:color="@color/colorBlack"/>
+    <stroke
+        android:width="2dp"
+        android:color="@color/colorDarkGrey"/>
     <size
-        android:width="30dp"
-        android:height="30dp"/>
+        android:width="18dp"
+        android:height="18dp"/>
 </shape>
