--- a/app/src/main/res/drawable/bg_radio_selected.xml
+++ b/app/src/main/res/drawable/bg_radio_selected.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="@color/colorBlack"/>
+        android:color="@color/colorAccent"/>
     <size
-        android:width="30dp"
-        android:height="30dp"/>
+        android:width="18dp"
+        android:height="18dp"/>
 </shape>
