--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/tl_tab"
                 layout="@layout/tab_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_below="@+id/toolbar"
                 />
         </android.support.v4.view.ViewPager>
