--- a/app/src/main/res/layout/app_bar_cart.xml
+++ b/app/src/main/res/layout/app_bar_cart.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/actionBarSize"
-    android:background="@color/colorBlack"
-    android:alpha="0.8"
+    android:background="@color/colorDarkGrey"
     app:contentInsetEnd="0dp"
     app:contentInsetLeft="0dp"
     app:contentInsetRight="0dp"
@@ -34,7 +33,7 @@
             android:textAllCaps="true"
             android:text="SHOPPING BAG"
             android:textColor="@color/colorWhite"
-            android:textSize="15sp"
+            android:textSize="19sp"
             app:fontFile="Roboto-Regular.ttf" />
 
         <com.android.shopr.views.ShoprTextView
@@ -48,7 +47,7 @@
             android:textAllCaps="true"
             android:background="@drawable/bg_border_square"
             android:textColor="@color/colorWhite"
-            android:textSize="9sp"
+            android:textSize="12sp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:paddingLeft="10dp"
