--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,10 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAppBg">
+    android:background="@color/colorWhite">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
+        android:paddingLeft="7dp"
+        android:paddingRight="7dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
