--- a/app/src/main/res/layout/layout_cart_menu_item.xml
+++ b/app/src/main/res/layout/layout_cart_menu_item.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center"
-    android:layout_width="40dp"
-    android:layout_height="40dp">
+    android:padding="5dp"
+    android:layout_width="50dp"
+    android:layout_height="50dp">
 
     <ImageView
         android:id="@+id/iv"
-        app:srcCompat="@drawable/ic_cart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        app:srcCompat="@drawable/ic_bag"
+        android:layout_width="15dp"
+        android:layout_height="20dp" />
 
     <TextView
         android:id="@+id/tv_total_items"
@@ -20,7 +21,7 @@
         android:textStyle="bold"
         android:layout_marginTop="-6dp"
         android:layout_toRightOf="@+id/iv"
-        android:layout_marginLeft="-10dp"
+        android:layout_marginLeft="-5dp"
         android:background="@drawable/bg_badge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
