--- a/app/src/main/res/layout/layout_tab_search.xml
+++ b/app/src/main/res/layout/layout_tab_search.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:focusableInTouchMode="true"
+    android:background="@color/colorWhite"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -9,7 +10,7 @@
         android:id="@+id/tl_tab"
         layout="@layout/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="30dp" />
 
     <com.android.shopr.views.ShoprEditText
         android:id="@+id/et_search_product"
@@ -17,12 +18,12 @@
         android:layout_height="40dp"
         android:layout_below="@+id/tl_tab"
         android:layout_toLeftOf="@+id/iv_filter"
-        android:paddingLeft="5dp"
+        android:paddingLeft="20dp"
         android:background="@android:color/transparent"
         android:drawablePadding="10dp"
-        android:drawableTint="@color/colorGray"
+        android:drawableTint="@color/colorDividerCart"
         android:hint="Type here to Search"
-        android:textColorHint="@color/colorGray"
+        android:textColorHint="@color/colorDividerCart"
         android:textSize="16sp"
         android:drawableLeft="@drawable/ic_search" />
 
