--- a/app/src/main/res/layout/product_image_and_description.xml
+++ b/app/src/main/res/layout/product_image_and_description.xml
@@ -1,84 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="5dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp">
+
     <RelativeLayout
+        android:paddingBottom="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <ImageView
-            android:layout_marginTop="3dp"
             android:id="@+id/iv_image"
             android:layout_width="match_parent"
-            android:layout_height="250dp" />
+            android:layout_height="194dp"
+            android:layout_marginTop="3dp" />
 
         <com.android.shopr.views.ShoprTextView
             android:id="@+id/tv_product_name"
-            android:layout_below="@+id/iv_image"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:layout_marginLeft="4dp"
-            android:textSize="16sp"
-            android:text="Orange Dress"
-            app:fontFile="Roboto-Regular.ttf"
             android:layout_width="wrap_content"
-            android:maxWidth="100dp"
             android:layout_height="wrap_content"
-            android:gravity="center" />
+            android:layout_below="@+id/iv_image"
+            android:layout_marginLeft="4dp"
+            android:gravity="center"
+            android:maxWidth="130dp"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:maxLines="1"
+            android:paddingTop="4dp"
+            android:text="Orange Dress"
+            android:textSize="12sp"
+            android:textColor="@color/colorBlack"
+            app:fontFile="Roboto-Medium.ttf" />
 
         <com.android.shopr.views.ShoprTextView
             android:id="@+id/tv_product_price_after_discount"
-            android:layout_below="@+id/tv_product_name"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:layout_marginLeft="2dp"
-            android:textSize="12sp"
-            android:text="Rs. 899"
-            app:fontFile="Roboto-BoldItalic.ttf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center" />
+            android:layout_below="@+id/tv_product_name"
+            android:gravity="center"
+            android:text="Rs. 899"
+            android:layout_marginLeft="4dp"
+            android:textSize="12sp"
+            android:textColor="@color/colorBlack"
+            app:fontFile="Roboto-Medium.ttf" />
 
         <com.android.shopr.views.ShoprTextView
             android:id="@+id/tv_product_price_original"
-            android:layout_below="@+id/tv_product_name"
-            android:layout_toRightOf="@+id/tv_product_price_after_discount"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:layout_marginLeft="4dp"
-            android:textSize="12sp"
-            android:text="Rs. 1799"
-            android:background="@drawable/bg_strikethrough"
-            app:fontFile="Roboto-BoldItalic.ttf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center" />
+            android:layout_below="@+id/tv_product_name"
+            android:layout_marginLeft="4dp"
+            android:layout_toRightOf="@+id/tv_product_price_after_discount"
+            android:background="@drawable/bg_strikethrough"
+            android:gravity="center"
+            android:text="Rs. 1799"
+            android:textSize="12sp"
+            app:fontFile="Roboto-Regular.ttf" />
 
         <com.android.shopr.views.ShoprTextView
             android:id="@+id/tv_product_discount"
-            android:layout_below="@+id/tv_product_name"
-            android:layout_toRightOf="@+id/tv_product_price_original"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:layout_marginLeft="4dp"
-            android:textSize="12sp"
-            android:text="50% OFF"
-            android:textColor="@color/colorRed"
-            app:fontFile="Roboto-BoldItalic.ttf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center" />
+            android:layout_below="@+id/tv_product_name"
+            android:layout_marginLeft="4dp"
+            android:layout_toRightOf="@+id/tv_product_price_original"
+            android:gravity="center"
+            android:text="50% OFF"
+            android:textColor="@color/colorRed"
+            android:textSize="12sp"
+            app:fontFile="Roboto-Regular.ttf" />
 
         <ImageView
             android:id="@+id/iv_watch_product"
-            app:srcCompat="@drawable/ic_watch_black"
-            android:layout_below="@+id/iv_image"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="5dp"
+            android:layout_width="18dp"
+            android:layout_height="11dp"
             android:layout_alignParentRight="true"
-            android:layout_width="25dp"
-            android:layout_height="25dp" />
+            android:layout_below="@+id/iv_image"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="11dp"
+            android:tint="@color/colorBlack"
+            app:srcCompat="@drawable/ic_watchlist" />
 
 
     </RelativeLayout>
