--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,9 +4,19 @@
     <item
         android:id="@+id/action_search"
         android:enabled="true"
-        android:icon="@drawable/ic_search"
+        app:actionLayout="@layout/layout_cart_item_search"
         android:title="@string/text_search"
         app:showAsAction="always" />
+
+
+    <item
+        android:id="@+id/action_watch_list"
+        android:enabled="true"
+        app:actionLayout="@layout/layout_cart_menu_item_watchlist"
+        android:title="@string/text_search"
+        app:showAsAction="always" />
+
+
 
     <item
         android:id="@+id/action_cart"
