--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -8,7 +8,7 @@
             android:title="Option 1" />
         <item
             android:id="@+id/nav_photos"
-            android:icon="@drawable/ic_cart"
+            android:icon="@drawable/ic_bag"
             android:title="Option 2" />
         <item
             android:id="@+id/nav_movies"
