--- a/app/src/main/res/menu/stores_menu.xml
+++ b/app/src/main/res/menu/stores_menu.xml
@@ -4,8 +4,8 @@
     <item
         android:id="@+id/action_watch_list"
         android:enabled="true"
-        android:icon="@drawable/ic_watch_white"
-        android:title="@string/text_search"
+        app:actionLayout="@layout/layout_cart_menu_item_watchlist"
+        android:title="Watchlist"
         app:showAsAction="always" />
 
     <item
